[package]
name = "tauri-craft"
authors = ["Ángel Cuervo <cuervolu@protonmail.com>"]
categories = ["development-tools", "command-line-utilities"]
description = "A simple CLI tool to generate Tauri projects with different templates and plugins."
keywords = ["tauri", "cli", "generator", "template", "plugin"]
readme = "README.md"
repository = "https://github.com/cuervolu/craft"
license = "MIT"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "craft"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.17", features = ["derive"] }
colour = "2.1.0"
console = "0.15.8"
indicatif = "0.17.8"
inquire = "0.7.5"
serde = "1.0.210"
tera = "1.20.0"
thiserror = "1.0.63"
toml_edit = "0.22.21"
